Catching up. I think Natty had to go back to an earlier back up, so that changed a bunch of things.